--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
   </head>
   <body>
     <h1>Hello World</h1>
+
+    <ul>
+      <li>
+        <a href="./feature2.html"> feature 2 </a>
+      </li>
+    </ul>
   </body>
 </html>
