--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
 
       <a href="./feature3.html"> click here </a>
     </div>
+
+    <img src="https://picsum.photos/200/300" alt="random image" />
   </body>
 </html>
